--- a/src/MoblieStyles.css
+++ b/src/MoblieStyles.css
@@ -1,31 +1,17 @@
-.spb-music-section {
-  background-color: rgb(0, 0, 0, 1);
-  height: 100vh;
-  width: 100%;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  text-align: center;
+.click-album{
+  height: 100px;
+  width: 100px;
+  margin-left: 10px;
+  margin-top: 10px;
+  background-color:aqua;
+  display: table;
 }
-.spb-music-section h2 {
-  color: #ffffff;
+.click-album span{
+  vertical-align:middle;
+  display: table-cell;
 }
-.color-white {
-  color: #ffffff;
-}
-.ml-1 {
-  margin-left: 1rem;
-}
-.mr-1 {
-  margin-right: 1rem;
-}
-.mb-1 {
-  margin-bottom: 1rem;
-}
-.mt-1 {
-  margin-top: 1rem;
-}
-.mt-2 {
-  margin-top: 2rem;
-}
-.spb-image {
+.new-album a{
+  text-decoration: none  !important;
+  vertical-align:middle;
+    display: table-cell;
 }
