--- a/src/PlayList.css
+++ b/src/PlayList.css
@@ -23,13 +23,13 @@
     box-shadow: 2px 16px 32px 10px rgba( 31, 38, 135, 0.1 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
-
+    opacity: 1 !important;
 }
 .rhap_controls-section{
     display: block !important;
 }
 .rhap_volume-controls{
-    margin-top: 20px;
+    margin-top: 35px;
     justify-content: center !important;
 }
 .rhap_progress-container{
@@ -50,7 +50,7 @@ color: rgb(0,0,0,0.5)
     top: 25px;
 }
 .rhap_volume-container{
-    flex: 0 1 75%;
+    flex: 0 1 45%;
 }
 .rhap_total-time{
 right: 0;
@@ -70,12 +70,16 @@ right: 0;
 .rhap_progress-indicator{
  background-color:#623bc2;
 }
-.rhap_progress-filled,.rhap_volume-bar,.rhap_volume-indicator{
+.rhap_progress-filled{
    background-color: #623bc2 !important;
 }
-/* .rhap_volume-button{
-    color: #623bc2 !important;
-} */
+.rhap_volume-indicator{
+    background-color: rgb(0,0,0,0.9);
+    z-index: 9; 
+}
+.rhap_volume-bar{
+    background-color: rgb(0,0,0,0.65);
+}
 
 .song-name{
     font-weight: 700;
@@ -91,4 +95,14 @@ right: 0;
     color: rgb(0,0,0,0.5);
     margin-left: 15px;
     margin-bottom: 10px;
+}
+.MuiAlert-filledSuccess{
+    background-color: rgb(0,0,0,0.85) !important;
+}
+.song-name{
+    width: 275px;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
 }
